[package]
name = "gpat-cli"
version = "0.1.0"
edition = "2021"
authors = ["noko1024 ynoko1024@gmail.com"]
description = "GitPATLink CLI Client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.6"
clap_complete = "3.1.1"
rust-crypto = "0.2.36"
bcrypt = "0.12.0"
aes-stream = "0.2.1"
reqwest = { version ="0.11.10", default-features = false, features = ["rustls-tls"]}
tokio = { version = "1", features = ["full"] }
base64 = "0.13.0"
uptime_lib = "0.2.1"
